# mtech-policy-recsys

./: .gitignore  README.md  netlify.toml  pyproject.toml  requirements.txt
data/coverage_requirements/: __init__.py  coverage_requirements.py
data/extracted_customer_requirements/: parsed_transcript_05_requirements.json  requirements_golf_coverage_0a6eb063-7662-4d83-a4b9-47ee48454c34.json  requirements_golf_coverage_17a4c401-8544-466e-8823-b9aa6262d5c7.json  requirements_golf_coverage_17f3d98c-bdd6-4421-b6db-42b7641a706c.json  requirements_golf_coverage_1cd04b1c-3dbd-458b-857e-ae193381ab81.json  requirements_golf_coverage_213771e4-0f1d-40ff-b26d-11cfe5233066.json  requirements_golf_coverage_2d11798d-3a51-400c-97c5-d491b0ea1f21.json  requirements_golf_coverage_2d7706e4-e75e-453b-9c35-74b422e51153.json  requirements_golf_coverage_2f99bc59-268d-49f9-9732-29b20a253935.json  (+91 more)
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: calculate_scenario_pass_rates.py  extract_policy_tier.py  generate_coverage_mapping.py  generate_ground_truth_coverage.py  generate_ground_truth_summary.py  generate_policy_comparison.py  generate_recommendation_report.py  orchestrate_scenario_evaluation.py  remove_source_info.py  run_recsys_demo.py
src/: __init__.py
tests/: test_generate_recommendation_report.py
tutorials/: library_migration.md  llm_service_guide.md  llm_service_tutorial.py
ux-webapp/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+1066 files in other folders)
